--- a/style.css
+++ b/style.css
@@ -927,7 +927,7 @@ header .container {
   font-weight: 700;
   color: #ffffff;
   letter-spacing: 3px;
-  text-align: left;
+  text-align: center;
   margin-bottom: 6px;
 }
 
